--- a/assets/styles/swiper.css
+++ b/assets/styles/swiper.css
@@ -18,7 +18,18 @@
   
 .mySwiper {
     width: 100%;
-    height: 300px;
+    height: 350px;
+}
+
+.mySwiper .swiper-slide {
+    height: 350px;
+}
+
+.mySwiper .swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
   
 .top__innovations {
@@ -47,7 +58,7 @@
 
 .top__innovations-card img {
     width: 100%;
-    height: 350px;
+    height: 200px;
     object-fit: cover;
     object-position: center;
     border-radius: 8px;
@@ -109,7 +120,11 @@
 
 @media screen and (max-width: 1024px) {
     .mySwiper {
-        height: 250px;
+        height: 280px;
+    }
+    
+    .mySwiper .swiper-slide {
+        height: 280px;
     }
 
     .topInnovationsSwiper-main {
@@ -126,7 +141,7 @@
     }
 
     .top__innovations-card img {
-        height: 200px;
+        height: 180px;
         object-position: center;
     }
 
@@ -142,6 +157,10 @@
     }
 
     .mySwiper {
+        height: 200px;
+    }
+    
+    .mySwiper .swiper-slide {
         height: 200px;
     }
 
@@ -160,7 +179,7 @@
     }
 
     .top__innovations-card img {
-        height: 180px;
+        height: 160px;
         border-radius: 5px;
         margin-bottom: 10px;
         object-position: center;
@@ -197,6 +216,10 @@
     .mySwiper {
         height: 180px;
     }
+    
+    .mySwiper .swiper-slide {
+        height: 180px;
+    }
 
     .topInnovationsSwiper-main {
         height: 450px;
@@ -213,7 +236,7 @@
     }
 
     .top__innovations-card img {
-        height: 150px;
+        height: 140px;
         margin-bottom: 8px;
         object-position: center;
     }
@@ -239,7 +262,11 @@
 
 @media screen and (max-width: 360px) {
     .mySwiper {
-        height: 150px;
+        height: 160px;
+    }
+    
+    .mySwiper .swiper-slide {
+        height: 160px;
     }
 
     .topInnovationsSwiper-main {
@@ -251,7 +278,7 @@
     }
 
     .top__innovations-card img {
-        height: 130px;
+        height: 120px;
     }
 
     .top__innovations-card h3 {
